# JobHelper

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: run_test.yml
src/job_helper/: __init__.py  __main__.py  _mermaid_backend.py  _tools.py  _utils.py  arg.py  cli.py  config.py  data_container.py  mpi_helper.py  project_helper.py  repo_watcher.py  scheduler.py  server.py  slurm_helper.py  viewer.py
src/job_helper/_htmls/: index.html
src/job_helper/init_example/: cli.py  project.yaml
tests/: example_cmds.py  fake_slurm.py  jh_config.toml  test_arg.py  test_bug_fixes.py  test_cli.py  test_config.py  test_data_container.py  test_fake_slurm.py  test_mpi.py  test_project.py  test_repo_watcher.py  test_server.py  test_slurm.py  utils.py
tests/fake_slurm_cmds/: sacct  sbatch
tutorial/: .gitignore  myfunc.py  tutorial.md
