[project]
name = "job_helper"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Shen Zhou", email = "shen34206@hotmail.com" }
]

license = "MIT"
dependencies=[
    "fire>=0.6.0",
    "loguru",
    "pydantic",
    "toml",
    "PyYAML",
    "fastapi",
    "uvicorn",
    "httpx>=0.27.2",
    "textual>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jh = "job_helper:cli.console_main"

[tool.pytest.ini_options]
log_cli = true
# False: no test names
log_cli_level = "INFO"
# log_cli_level = CRITICAL
# INFO: more information
required_plugins = ["pytest-html", "pytest-cov"]
addopts = "--cov job_helper --cov-config=pyproject.toml --cov-report html --cov-report term "

[tool.coverage.run]
branch = true
source = ["./src/job_helper"]

[tool.coverage.report]
ignore_errors = true

exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise FileNotFoundError",
    "raise FileExistsError",
    "raise ValueError",
    "return NotImplemented",
]

omit = []

[tool.coverage.html]
title = "job_helper Test Coverage Report"
directory = "docs/job_helper/htmlcov"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "zmq>=0.0.0",
]
